fix rubberband background

--- a/mx-ease-Dark/gtk-3.0/gtk.css
+++ b/mx-ease-Dark/gtk-3.0/gtk.css
@@ -139,7 +139,7 @@ XfdesktopIconView.view .rubberband,
 treeview.view rubberband,
 flowbox rubberband {
   border: 1px solid #2e63ba;
-  background-color: transparent;
+  background-color: alpha(#2e63ba, 0.35);
 }
 
 flowbox flowboxchild {
