--- a/mx-ease/gtk-3.0/extra-tweaks.css
+++ b/mx-ease/gtk-3.0/extra-tweaks.css
@@ -16,7 +16,9 @@ toolbar toolbutton button:hover { color: #424242; background-color: #c3d5f6; bor
 /* Thunar */
 
 .thunar .sidebar .view:selected { color: #ffffff; background-color: #0f56d9; }
+
 .thunar .sidebar .view:hover { color: #1d2324; background-color: #c3d5f6; }
+
 .thunar .standard-view .view { color: #1d2324; background-color: #f5f5f5; }
 
 .thunar .standard-view .view:selected { color: #ffffff; background-color: #0f56d9; }
@@ -135,3 +137,28 @@ viewport list row:selected:hover { background-color: #0f56d9; color: #ffffff; }
 /*libreoffice*/
 
 scrolledwindow .view:hover   { color: #424242; background-color: #c3d5f6; }
+
+/*gimp*/
+
+toolpalette toolitemgroup button {
+  border: none;
+}
+
+GimpDock treeview.view:selected {
+  background-color: #c3d5f6;
+  color: #1d2324;
+}
+
+viewport GimpSpinScale {
+  color: #1d2324;
+}
+
+GimpSpinScale entry progress {
+  background-color: #c3d5f6;
+  color: #1d2324;
+}
+
+dialog scrolledwindow treeview:selected {
+  background-color: #c3d5f6;
+  color: #1d2324;
+}
