--- a/mx-ease/gtk-3.0/gtk.css
+++ b/mx-ease/gtk-3.0/gtk.css
@@ -663,13 +663,38 @@ button.text-button.image-button image:not(:only-child) {
 }
 
 .linked > button:not(:only-child):focus {
-  transition: all 75ms cubic-bezier(0, 0, 0.2, 1), border 300ms cubic-bezier(0, 0, 0.2, 1), box-shadow 300ms cubic-bezier(0, 0, 0.2, 1);
-  outline: none;
-  box-shadow: none;
+  box-shadow: inset 0 0 0 1px transparent, 0 0 0 1px transparent;
   background-color: #f5f5f5;
   color: #1d2324;
-  border-color: rgba(0, 0, 0, 0.08);
-  border-bottom-color: rgba(0, 0, 0, 0.18);
+  border: solid 1px #424242;
+}
+
+.linked > button:not(:only-child):hover {
+  box-shadow: inset 0 0 0 1px transparent, 0 0 0 1px transparent;
+  background-color: #c3d5f6;
+  color: #1d2324;
+  border: solid 1px #0f56d9;
+}
+
+.linked > button:not(:only-child):active {
+  box-shadow: inset 0 0 0 1px transparent, 0 0 0 1px #0f56d9;
+  background-color: #c3d5f6;
+  color: #1d2324;
+  border: solid 1px #0f56d9;
+}
+
+.linked > button:not(:only-child):not(:focus) {
+  box-shadow: inset 0 0 0 1px transparent, 0 0 0 1px transparent;
+  background-color: #f5f5f5;
+  color: #1d2324;
+  border: solid 1px #909090;
+}
+
+.linked > button:not(:only-child):not(:focus):hover {
+  box-shadow: inset 0 0 0 1px transparent, 0 0 0 1px transparent;
+  background-color: #c3d5f6;
+  color: #1d2324;
+  border: solid 1px #0f56d9;
 }
 
 .linked > button:not(:only-child):checked:focus {
