--- a/mx-ease/gtk-3.0/extra-tweaks.css
+++ b/mx-ease/gtk-3.0/extra-tweaks.css
@@ -84,6 +84,9 @@ scrolledwindow button { border: 1px solid transparent; }
 box grid toolbar button { border: solid 1px transparent; }
 scrolledwindow viewport grid button { border: solid 1px transparent; }
 
+.horizontal .inkscape-toolbar .flat { border: solid 1px transparent; }
+.horizontal .inkscape-toolbar .combo { border: solid 1px transparent; }
+.horizontal .inkscape-toolbar .toggle { background-color: transparent; border: solid 1px transparent; }
 
 /*Claws Mail*/
 
@@ -138,32 +141,9 @@ viewport list row:selected:hover { background-color: #0f56d9; color: #ffffff; }
 
 scrolledwindow .view:hover   { color: #424242; background-color: #c3d5f6; }
 
-/*gimp*/
+/*bleachbit*/
 
-toolpalette toolitemgroup button {
-  border: solid 1px transparent;
-}
-
-GimpDock treeview.view:selected {
-  background-color: #0f56d9;
-  color: #ffffff;
-}
-
-GimpDock treeview.view:hover {
-  background-color: #c3d5f6;
-  color: #1d2324;
-}
-
-GimpDock GimpSpinScale {
-  color: #1d2324;
-}
-
-GimpDock GimpSpinScale entry progress {
-  background-color: #c3d5f6;
-}
-
-dialog scrolledwindow treeview:selected {
-  background-color: #c3d5f6;
-  color: #1d2324;
-}
-
+.appmenu.popup.titlebutton.toggle { border: none; }
+.popup.toggle { border: none; }
+.titlebutton.vertical { background-color: transparent; }
+.image-button { border: none; }
