--- a/mx-ease-Dark/gtk-3.0/gtk.css
+++ b/mx-ease-Dark/gtk-3.0/gtk.css
@@ -681,9 +681,9 @@ button.text-button.image-button image:not(:only-child) {
 
 .linked > button:not(:only-child):not(:focus) {
   box-shadow: inset 0 0 0 1px transparent, 0 0 0 1px transparent;
-  background-color: #505050;
-  color: #ececee;
-  border: solid 1px #909090;
+  background-color: transparent;
+  color: #ffffff;
+  border: solid 1px transparent;
 }
 
 .linked > button:not(:only-child):not(:focus):hover {
@@ -4587,13 +4587,14 @@ colorchooser .popover.osd:backdrop {
  **********************/
 decoration {
   transition: box-shadow 75ms cubic-bezier(0, 0, 0.2, 1);
-  border-radius: 3px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 16px 18px rgba(0, 0, 0, 0.15), 0 11px 23px rgba(0, 0, 0, 0.13), 0 0 0 1px rgba(255, 255, 255, 0.12), 0 15px 30px transparent;
+  border: solid 2px #1d2324;
+  border-radius: 0px;
+  box-shadow: 0 0 0 1px transparent;
   margin: 8px;
 }
 
 decoration:backdrop {
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1), 0 3px 4px rgba(0, 0, 0, 0.14), 0 1px 6px rgba(0, 0, 0, 0.12), 0 0 0 1px rgba(255, 255, 255, 0.12), 0 15px 30px transparent;
+  box-shadow: 0 0 0 1px transparent;
 }
 
 .maximized decoration, .fullscreen decoration, .tiled decoration, .tiled-top decoration, .tiled-right decoration, .tiled-bottom decoration, .tiled-left decoration {
